...
    android:padding="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NoteActivity"
    tools:showIn="@layout/activity_note">

    <EditText
        android:id="@+id/text_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_title_hint"
        android:inputType="textMultiLine"
        android:nextFocusRight="@+id/text_note_text"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorHint"
        app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
        app:layout_constraintStart_toStartOf="@+id/spinner_courses"
        app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />

...
